full_df csv created

--- a/main.ipynb
+++ b/main.ipynb
@@ -3942,6 +3942,16 @@
         "plt.title('Review Score vs. Delivery Time')\n",
         "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 75,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Save the full_df DataFrame to a CSV file inside the data folder\n",
+        "full_df.to_csv('./data/full_df.csv', index=False)"
+      ]
     }
   ],
   "metadata": {
